style.css
* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

.project-title {
  text-align: center;
  margin: 2rem;
}

#root {
  color: red;
  width: 100vw;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: flex-start;
}

.card-info {
  width: 300px;
  height: 580px;
  margin: 10px 0;
  border-radius: 11px;
  text-align: justify;
  border: 1px solid rgba(0, 0, 0, 0.3);
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 8px 0 rgba(0, 0, 0, 0.2);
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
  z-index: 1;
}

.card-title {
  padding: 10px;
  font-size: 25px;
  text-align: center;
  border: 3px solid rgba(0, 0, 0, 0.5);
  border-radius: 10px;
  margin-bottom: 5px;
  width: 100%;
}

.card-img {
  display: block;
  margin: 0 auto;
  border-radius: 5px;
}

.card-summary {
  padding: 10px;
  margin: 10px;
}

